<resources>
    <string name="app_name">Ran_Wang_MyRuns5</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile Photo:</string>
    <string name="photo_button">CHANGE</string>
    <string name="name">Name</string>
    <string name="edit_name">Your Name</string>
    <string name="email">Email</string>
    <string name="edit_email">Your Email</string>
    <string name="phone">Phone</string>
    <string name="edit_phone">Your Phone Number</string>
    <string name="gender">Gender</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="year_class">Class</string>
    <string name="edit_class">eg. 2012</string>
    <string name="major">Major</string>
    <string name="edit_major">Your Major</string>
    <string name="button_save">SAVE</string>
    <string name="button_cancel">Cancel</string>
    <string name="map_button_save">SAVE</string>
    <string name="map_button_cancel">Cancel</string>
    <string name="manual_button_save">SAVE</string>
    <string name="manual_button_cancel">Cancel</string>


    <!-- Input types for the spinner -->
    <string-array name="input_types">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <!-- Activity types for the spinner -->
    <string-array name="activity_types">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

</resources>